# Project

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
app/: CMakeLists.txt  run.cpp
include/: App.h  AppContext.h  Debug.h  GenericAction.h  Menu.h
src/: ActionsDictionary.cpp  App.cpp  CMakeLists.txt  Menu.cpp  MenuDictionary.cpp
